force-app/main/default/objects/Employee__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peon</fullName>
            </value>
            <value>
                <fullName>Sweeper</fullName>
            </value>
            <value>
                <fullName>Gardner</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Security Guard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>