force-app/main/default/objects/Employee__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>15</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>